--- a/Context-Api/miniProject/package.json
+++ b/Context-Api/miniProject/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "a",
+  "name": "m",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,24 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.0",
-    "@radix-ui/react-tooltip": "^1.1.8",
-    "@tailwindcss/vite": "^4.0.15",
-    "axios": "^1.8.4",
-    "cesium": "^1.127.0",
-    "chart.js": "^4.4.8",
-    "framer-motion": "^12.6.2",
-    "leaflet": "^1.9.4",
-    "openai": "^4.90.0",
     "react": "^19.0.0",
-    "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
-    "react-globe.gl": "^2.33.2",
-    "react-icons": "^5.5.0",
-    "react-leaflet": "^5.0.0",
-    "react-modal": "^3.16.3",
-    "react-router-dom": "^7.4.0",
-    "tailwindcss": "^4.0.15"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
