--- a/Api-Project/package.json
+++ b/Api-Project/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.8",
     "framer-motion": "^12.6.2",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.487.0",
     "openai": "^4.90.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
